# w2dynamics

./: .gitignore  .gitmodules  CITATION  CMakeLists.txt  DMFT.man  DMFT.py  Documentation.cfg  Maxent.py  PyCompileall.txt  README.md  Singularity  cfg_converter.py  completions.sh  cprun  cthyb  hgrep  hgrep.man  run_tests.sh  setup.py
.github/workflows/: build.yml
Postproc/: chi_loc.py  deltaN.py  gloctau.py  make_vertex_files.py  sample.py  script_GLeg.scr  sigmaw.py  siw_smooth.py  sum_occ.scr  taylorfit_selfenergy.py
auxiliaries/: __init__.py  compoundIndex.py  config.py  configspec  hdfout.py  input.py  oldoutput.py  onlinestatistics.py  wien2k.py
clusters/: hclm_script.sh  vsc_submit.sh  w2dynamics-vsc3.slrm
cmake/Modules/: FindCONFIGOBJ.cmake  FindConfigObj.cmake  FindFFTW.cmake  FindH5PY.cmake  FindMPI4PY.cmake  FindNFFT.cmake  FindNUMPY.cmake  FindOpenMP_Fortran.cmake  FindSCIPY.cmake  SetCompileFlag.cmake  SetFortranFlags.cmake  SetParallelizationLibrary.cmake  SetUpLAPACK.cmake  SetupF2Py.cmake  UseF2Py.cmake  installviapip.cmake
dmft/: _compat.py  atoms.py  doublecounting.py  dynamicalU.py  gw.py  impurity.py  interaction.py  lattice.py  meta.py  mpi.py  selfcons.py
maxent/: SigmaBootStrap.py  Solver.py  __init__.py
preproc/: analytic_leads_dqd.sh  analytic_leads_q2lj.sh  lead.in  permute_bands.py
singularity/: README.md  w2dynamics_alpine.def  w2dynamics_arch.def  w2dynamics_debian.def  w2dynamics_debian10.def  w2dynamics_debian11.def  w2dynamics_debian12.def  w2dynamics_ubuntu.def  w2dynamics_ubuntu2004.def  w2dynamics_ubuntu2104.def  w2dynamics_ubuntu2204.def
src/ctqmc_fortran/: .f2py_f2cmap  Accumulators.F90  AngularMomentum.F90  Ausgabe.F90  CMakeLists.txt  CTQMC.F90  CompoundIndex.F90  Lanczos.F90  LegendrePoly.F90  MatrixUpdate.F90  Nfft_base.F90  Nfft_worm.F90  Nfft_z.F90  Operator.F90  Parameters.F90  Progress.F90  Signals.F90  SparseMatrix.F90  States.F90  Trace.F90
src/maxent/: .f2py_f2cmap  CMakeLists.txt  MaximumEntropy.F90  MersenneTwister.F90
src/mtrng/: CMakeLists.txt  Random.F90  random.cc
testsuite/ctqmc.tests/: 1-get-MatFull.F90  2-time-evolve-in-eigenbasis.F90  3-operator-list-stress-test.F90  CMakeLists.txt
testsuite/maxent.tests/: 1-getgridunit.F90  CMakeLists.txt
testsuite/mtrng.tests/: 1-basic-call.F90  CMakeLists.txt
testsuite/w2dyn.tests/: CMakeLists.txt  compileall.py
w2dyn/auxiliaries/: __init__.py  compatibility.py  compound_index.py  config.py  configspec  deepflatten.py  hdfout.py  input.py  oldoutput.py  postprocessing.py  quantities.py  statistics.py  transform.py  utilities.py  wien2k.py
w2dyn/dmft/: __init__.py  _compat.py  atoms.py  ci_solver.py  cthyb_solver.py  doublecounting.py  dynamicalU.py  edipack_solver.py  edipy_solver.py  gw.py  impurity.py  interaction.py  jackknife.py  lattice.py  meta.py  mixing.py  mpi.py  orbspin.py  selfcons.py  worm.py
w2dyn/maxent/: SigmaBootStrap.py  Solver.py  makedependf90.pl
